--- a/DirCompare/DirCompare.csproj
+++ b/DirCompare/DirCompare.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileCompare.cs" />
+    <Compile Include="FolderComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
